# build with >   wasm-pack build --target web
[package]
name = "tuliprox-filter-parser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pest = "2.8.4"
pest_derive = "2.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
regex = "1.12.2"
enum-iterator = "2.3"

